--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-		"server": "nodemon -e js,json,css ./bin/www",
+    "server": "nodemon -e js,json,css ./bin/www",
     "client": "npm start --prefix ./client",
-		"all": "concurrently \"npm run server\" \"npx prisma studio\" \"npm run client\""
+    "all": "concurrently \"npm run server\" \"npx prisma studio\" \"npm run client\""
   },
   "dependencies": {
-		"bcrypt": "^5.1.1",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
-		"cors": "^2.8.5",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-		"dotenv": "^16.4.1",
+    "dotenv": "^16.4.1",
     "express": "~4.16.1",
-		"jsonwebtoken": "^9.0.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
