--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+DATABASE_URL="mongodb+srv://leva:S3cs7R1FTiPGs7xS@social.jupnbxo.mongodb.net/social-db?retryWrites=true&w=majority"
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+JWT_SECRET="YUmT}FCc>i/YXCH+UK-u6>)_1<csrG"
