--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "all": "concurrently \"npm run server\" \"npx prisma studio\" \"npm run client\""
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "@prisma/client": "^5.9.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.1",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
+    "jade": "^0.29.0",
+    "jdenticon": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "prisma": "^5.9.1"
   }
 }
