--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,6 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-
 # next.js build output
 .next
 
@@ -67,3 +66,5 @@ src/.DS_Store
 /public/dist
 public/dist
 dist
+
+uploads
