--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/node": "^20.11.19",
     "framer-motion": "^11.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
