--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL="mongodb+srv://leva:S3cs7R1FTiPGs7xS@social.jupnbxo.mongodb.net/social-db?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://leva:S3cs7R1FTiPGs7xS@social.jupnbxo.mongodb.net/social-db"
 
 JWT_SECRET="YUmT}FCc>i/YXCH+UK-u6>)_1<csrG"
